<resources>
    <string name="app_name">Second Hand</string>
    <string name="nama_item">Nama Item</string>
    <string name="category_item">Category Item</string>
    <string name="harga_item">Harga Item</string>
    <string name="button">BUTTON</string>
    <string name="seller_city">Seller City</string>
    <string name="seller_name">Seller Name</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="seller_picture">seller_picture</string>
    <string name="swipe_image">swipe_image</string>
    <string name="backa_arrow">backa_arrow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="kategori">
        <item>Pakaian</item>
        <item>Buku</item>
        <item>Perawatan Wajah</item>
        <item>Makanan</item>
        <item>Lainnya</item>
    </string-array>
</resources>