<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.finalproject.binar.secondhand.fragment.sell.PreviewFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrow_back"
            app:fabSize="mini"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/watch"/>
        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/circle_indicator"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/transparent"
            android:layout_marginTop="210dp"/>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_item_info"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_item_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nama_item"
                        android:textColorHint="@color/black"
                        android:text=""
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <TextView
                        android:id="@+id/tv_item_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/category_item"
                        android:text=""
                        android:textSize="11sp"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <TextView
                        android:id="@+id/tv_item_harga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/harga_item"
                        android:textColorHint="@color/black"
                        android:text=""
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_seller_profile"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/cv_item_info"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        app:cardCornerRadius="20dp">

                        <ImageView
                            android:id="@+id/iv_seller_info"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@mipmap/ic_launcher"
                            android:contentDescription="@string/seller_picture" />

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/tv_seller_nama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text=""
                            android:hint="@string/seller_name"
                            android:textColorHint="@color/black"/>

                        <TextView
                            android:id="@+id/tv_seller_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:textSize="11sp"
                            android:text=""
                            android:hint="@string/seller_city"/>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/cv_seller_profile"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/deskripsi"
                        android:textColorHint="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text=""/>

                    <TextView
                        android:id="@+id/tv_deskripsi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/lorem_ipsum"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_terbitkan2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:hint="Terbitkan"
        android:textColorHint="@color/white"
        android:text=""
        android:backgroundTint="@color/dark_purple"
        app:cornerRadius="15dp"
        android:layout_gravity="center|bottom"/>
</FrameLayout>